<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/account_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_top"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/bg_view_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_avatar_outline"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/bg_avatar_outline"
                app:layout_constraintBottom_toTopOf="@id/view_top"
                app:layout_constraintEnd_toEndOf="@id/view_top"
                app:layout_constraintStart_toStartOf="@id/view_top"
                app:layout_constraintTop_toTopOf="@id/view_top"
                app:layout_constraintVertical_chainStyle="packed" />

            <View
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/bg_avatar"
                app:layout_constraintBottom_toBottomOf="@id/view_avatar_outline"
                app:layout_constraintEnd_toEndOf="@id/view_avatar_outline"
                app:layout_constraintStart_toStartOf="@id/view_avatar_outline"
                app:layout_constraintTop_toTopOf="@id/view_avatar_outline" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_profile"
                android:layout_width="84dp"
                android:layout_height="84dp"
                app:layout_constraintBottom_toBottomOf="@+id/view_avatar_outline"
                app:layout_constraintEnd_toEndOf="@+id/view_avatar_outline"
                app:layout_constraintStart_toStartOf="@+id/view_avatar_outline"
                app:layout_constraintTop_toTopOf="@+id/view_avatar_outline"
                app:shapeAppearanceOverlay="@style/RoundedImageView"
                app:srcCompat="@drawable/profile" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="?colorOnSurface"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/text_email"
                app:layout_constraintEnd_toEndOf="@+id/view_avatar_outline"
                app:layout_constraintStart_toStartOf="@+id/view_avatar_outline"
                app:layout_constraintTop_toBottomOf="@+id/view_avatar_outline"
                tools:text="John Wick" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textColor="?colorOnSurface"
                app:layout_constraintBottom_toBottomOf="@id/view_top"
                app:layout_constraintEnd_toEndOf="@+id/text_name"
                app:layout_constraintStart_toStartOf="@+id/text_name"
                app:layout_constraintTop_toBottomOf="@+id/text_name"
                tools:text="johnwick@gmail.com" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:paddingBottom="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_top">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18dp">

                    <ImageView
                        android:id="@+id/ic_edit"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="20dp"
                        android:importantForAccessibility="no"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_edit"
                        app:tint="?colorOnSurface" />

                    <TextView
                        android:id="@+id/text_edit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/edit_your_profile"
                        android:textColor="?colorOnSurface"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/ic_edit"
                        app:layout_constraintEnd_toStartOf="@+id/imageView123"
                        app:layout_constraintStart_toEndOf="@+id/ic_edit"
                        app:layout_constraintTop_toTopOf="@+id/ic_edit" />

                    <ImageView
                        android:id="@+id/imageView123"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:importantForAccessibility="no"
                        app:layout_constraintBottom_toBottomOf="@+id/ic_edit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/ic_edit"
                        app:srcCompat="@drawable/ic_chevron_right"
                        app:tint="?colorOnSurface" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingVertical="18dp">

                    <ImageView
                        android:id="@+id/ic_reminder"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="20dp"
                        android:importantForAccessibility="no"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_alarm"
                        app:tint="?colorOnSurface" />

                    <TextView
                        android:id="@+id/text_reminder"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/reminder"
                        android:textColor="?colorOnSurface"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/ic_reminder"
                        app:layout_constraintEnd_toStartOf="@+id/imageView11"
                        app:layout_constraintStart_toEndOf="@+id/ic_reminder"
                        app:layout_constraintTop_toTopOf="@+id/ic_reminder" />

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:importantForAccessibility="no"
                        app:layout_constraintBottom_toBottomOf="@+id/ic_reminder"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/ic_reminder"
                        app:srcCompat="@drawable/ic_chevron_right"
                        app:tint="?colorOnSurface" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingVertical="18dp">

                    <ImageView
                        android:id="@+id/ic_log_out"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginStart="20dp"
                        android:importantForAccessibility="no"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_logout"
                        app:tint="?colorOnSurface" />

                    <TextView
                        android:id="@+id/text_log_out"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/sign_out"
                        android:textColor="?colorOnSurface"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/ic_log_out"
                        app:layout_constraintEnd_toStartOf="@+id/imageView12"
                        app:layout_constraintStart_toEndOf="@+id/ic_log_out"
                        app:layout_constraintTop_toTopOf="@+id/ic_log_out" />

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:importantForAccessibility="no"
                        app:layout_constraintBottom_toBottomOf="@+id/ic_log_out"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/ic_log_out"
                        app:srcCompat="@drawable/ic_chevron_right"
                        app:tint="?colorOnSurface" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>