<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/routing_fragment">
    <fragment
        android:id="@+id/routing_fragment"
        android:name="com.example.wordnotes.ui.RoutingFragment">
        <action
            android:id="@+id/action_routing_fragment_to_auth_flow"
            app:destination="@id/auth_flow"
            app:popUpTo="@id/routing_fragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_routing_fragment_to_home_fragment"
            app:destination="@id/home_fragment"
            app:popUpTo="@id/routing_fragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/home_fragment"
        android:name="com.example.wordnotes.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_fragment_to_word_detail_fragment"
            app:destination="@id/word_detail_fragment" />
        <action
            android:id="@+id/action_home_fragment_to_add_edit_word_fragment"
            app:destination="@id/add_edit_word_fragment" />
    </fragment>
    <fragment
        android:id="@+id/add_edit_word_fragment"
        android:name="com.example.wordnotes.ui.addeditword.AddEditWordFragment"
        tools:layout="@layout/fragment_add_edit_word">
        <argument
            android:name="wordId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <dialog
        android:id="@+id/word_detail_fragment"
        android:name="com.example.wordnotes.ui.worddetail.WordDetailFragment"
        tools:layout="@layout/fragment_word_detail">
        <argument
            android:name="wordId"
            app:argType="string" />
        <action
            android:id="@+id/action_word_detail_fragment_to_add_edit_word_fragment"
            app:destination="@id/add_edit_word_fragment"
            app:popUpTo="@id/home_fragment" />
    </dialog>
    <fragment
        android:id="@+id/learning_fragment"
        android:name="com.example.wordnotes.ui.learning.LearningFragment"
        tools:layout="@layout/fragment_learning">
        <action
            android:id="@+id/action_learning_fragment_to_flash_card_fragment"
            app:destination="@id/flash_card_fragment" />
    </fragment>
    <fragment
        android:id="@+id/flash_card_fragment"
        android:name="com.example.wordnotes.ui.learning.FlashCardFragment"
        tools:layout="@layout/fragment_flash_card">
        <argument
            android:name="type"
            app:argType="integer"
            app:nullable="false" />
    </fragment>
    <fragment
        android:id="@+id/account_fragment"
        android:name="com.example.wordnotes.ui.account.AccountFragment"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_account_fragment_to_edit_profile_fragment"
            app:destination="@id/edit_profile_fragment" />
        <action
            android:id="@+id/action_account_fragment_to_reminder_fragment"
            app:destination="@id/reminder_fragment" />
    </fragment>
    <fragment
        android:id="@+id/reminder_fragment"
        android:name="com.example.wordnotes.ui.account.reminder.ReminderFragment"
        tools:layout="@layout/fragment_reminder" />
    <fragment
        android:id="@+id/edit_profile_fragment"
        android:name="com.example.wordnotes.ui.account.profile.EditProfileFragment"
        tools:layout="@layout/fragment_edit_profile" />
    <navigation
        android:id="@+id/auth_flow"
        app:startDestination="@id/sign_in_fragment">
        <fragment
            android:id="@+id/sign_in_fragment"
            android:name="com.example.wordnotes.ui.auth.SignInFragment"
            tools:layout="@layout/fragment_sign_in">
            <action
                android:id="@+id/action_sign_in_fragment_to_sign_up_fragment"
                app:destination="@id/sign_up_fragment" />
            <action
                android:id="@+id/action_sign_in_fragment_to_forgot_password_fragment"
                app:destination="@id/forgot_password_fragment" />
        </fragment>
        <fragment
            android:id="@+id/sign_up_fragment"
            android:name="com.example.wordnotes.ui.auth.SignUpFragment"
            tools:layout="@layout/fragment_sign_up" />
        <fragment
            android:id="@+id/forgot_password_fragment"
            android:name="com.example.wordnotes.ui.auth.ForgotPasswordFragment"
            tools:layout="@layout/fragment_forgot_password" />
    </navigation>
</navigation>